# vkr_explorer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: discovery_smoke_candidates.jsonl
artifacts/baseline_run_01/: summary.json
artifacts/baseline_run_01/dataset/: baseline_dataset.csv
artifacts/baseline_run_01/linear_svm/: config.json  metrics_test.json  metrics_val.json  model.joblib  predictions_test.csv  (+3 more)
artifacts/baseline_smoke/: summary.json
artifacts/discovery_smoke_run_2/: candidates.csv  candidates.jsonl  manifest.json  predictions.csv  predictions.jsonl  queries.jsonl
data/discovery/: queries.txt
data/input/: test_articles.jsonl  test_articles_155.jsonl
data/normalized/: articles.csv  articles.jsonl  articles_with_fulltext.jsonl
docs/: 12stage_plam.md  345stage_plam.md  baseline_plan.md  discovery_labeling_plan.md  example_record.json  schema.md
src/vkr_article_dataset/: cli.py  config.py  discovery.py  discovery_inference.py  discovery_storage.py  evaluation.py  features.py  http.py  io_utils.py  merge.py  models.py  normalization.py  pdf_pipeline.py  review_app.py  review_store.py  schema.py  search_sources.py  splitting.py  storage.py  tag_rules.py  tagger.py  train_baseline.py  training_dataset.py  utils.py
src/vkr_article_dataset.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_baseline.py  test_discovery.py  test_http.py  test_matching_and_dedup.py  test_merge.py  test_normalization.py  test_pdf_pipeline.py  test_review_store.py  test_tagger.py
(+29 files in other folders)
