[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vkr-article-dataset"
version = "0.1.0"
description = "Normalize article lists into a local dataset for VKR literature screening"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "streamlit>=1.44.0",
  "PyMuPDF>=1.26.0",
  "pypdf>=5.4.0",
]

[project.scripts]
vkr-dataset = "vkr_article_dataset.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
